# scrapylivemaster

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  scrapy.Dockerfile  scrapy.cfg
src/: items.py  middlewares.py  pipelines.py  settings.py
src/spiders/: amazon.py  blooming.py  blooming_cat.py  eros.py  eros_cat.py  models.py  oskelly.py  ounass.py  ounass_cat.py  product_shop.py  schemas.py  service.py
