[tool.poetry]
name = "scrapylivemaster"
version = "0.1.0"
description = ""
authors = ["ltshg <n.velichko@urent.city>"]

[tool.poetry.dependencies]
python = "^3.9.5"
Scrapy = "^2.6.1"
ipython = "^8.4.0"
pydantic = "^1.9.1"
loguru = "^0.6.0"
redis = "^4.3.3"
peewee = "^3.15.0"
psycopg2-binary = "^2.9.3"
scrapy-playwright = "^0.0.19"
scrapy-proxies = "^0.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
